--- a/puntos/punto4/punto4.html
+++ b/puntos/punto4/punto4.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>taller segundo momento</title>
+    <title>punto4</title>
 </head>
 <body>
     
-
-    <script src="./puntos/punto3.js"></script>
+    <script src="./punto4.js"></script>
 </body>
 </html>
